--- a/platforms/browser/www/index.html
+++ b/platforms/browser/www/index.html
@@ -27,9 +27,14 @@
         <!-- WARNING: for iOS 7, remove the width=device-width and height=device-height attributes. See https://issues.apache.org/jira/browse/CB-4323 -->
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
         <link rel="stylesheet" type="text/css" href="css/index.css" />
-        <title>Hello World</title>
+        <title>HCW</title>
+        <script src="parse-1.6.7.js"></script>
+
     </head>
+
+
     <body>
+
         <div class="app">
             <h1>PhoneGap</h1>
             <div id="deviceready" class="blink">
@@ -40,7 +45,32 @@
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
         <script type="text/javascript">
+
             app.initialize();
         </script>
+
+        <script>
+
+
+            Parse.initialize("pRuiPyhzLD8qOfQxnKOyCyQAkrdIQyZKcQt3184m", "IF0VqIohNLvo9mVZ10gX5wvaR8wtXcnoQhfeqPVs");
+
+
+            var TestObject = Parse.Object.extend("TestObject");
+            var testObject = new TestObject();
+            testObject.save({foo2: "bar12"}).then(function(object) {
+                var msgbox = Windows.UI.Popups.MessageDialog("yay! it worked");
+                return msgbox.showAsync();
+            });
+
+
+        </script>
+
+
+  <script>
+
+
+
+
+  </script>
     </body>
 </html>
