--- a/platforms/browser/www/index.html
+++ b/platforms/browser/www/index.html
@@ -6,13 +6,20 @@
 -->
 <html>
 <head>
-    <title>Login</title>
+    <title>Eventually by HTML5 UP</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
     <link rel="stylesheet" href="assets/css/main.css" />
     <!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
     <!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
+    <script type="text/javascript" src="http://www.parsecdn.com/js/parse-latest.js"></script>
+    <script src="//www.parsecdn.com/js/parse-1.6.7.min.js"></script>
+    <script src="js/parse-1.6.7.js"></script>
+
+
+    <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
+    <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
 </head>
 <body>
 
@@ -23,25 +30,15 @@
 </header>
 
 <!-- Signup Form -->
-<form id="signup-form" method="post" action="#">
-    <input type="text" id="patID" placeholder="Enter Patient ID" />
 
+<form id="signup-form" method="post" >
 
-    <input type="submit" value="Search" />
+    <input type="text"  id="search" placeholder="Enter Patient ID" />
+    <input type="button" value="Search" id="btnSearch" onclick="mast()"  />
 </form>
 
-<!-- Footer -->
-<footer id="footer">
-    <ul class="icons">
-        <li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-        <li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-        <li><a href="#" class="icon fa-github"><span class="label">GitHub</span></a></li>
-        <li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
-    </ul>
-    <ul class="copyright">
-        <li>&copy; Untitled.</li><li>Credits: <a href="http://html5up.net">HTML5 UP</a></li>
-    </ul>
-</footer>
+<script src="js/parseInit.js"></script>
+<script src="js/ParseSearch.js"></script>
 
 <!-- Scripts -->
 <!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
