--- a/www/index.html
+++ b/www/index.html
@@ -39,6 +39,7 @@
 
 <script src="js/parseInit.js"></script>
 <script src="js/ParseSearch.js"></script>
+<script src="js/graph.js"></script>
 
 <!-- Scripts -->
 <!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
